[package]
name = "typed-json"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "A JSON serialization file format"
documentation = "https://docs.rs/typed-json"
edition = "2021"
keywords = ["json", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/typed-json"
rust-version = "1.56"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
serde = { version = "1.0.166", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_test = "1"
serde_json = "1"
divan = "0.1"
serde-json-core = "0.5.1"

[[bench]]
harness = false
name = "serialize_string"

[[bench]]
harness = false
name = "serialize_large"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
